Sync current user to firebase (badly. There's like no auth)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="main"></div>
+    <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
     <script src="build/index.js"></script>
   </body>
 </html>
