--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div id="main" class="container"></div>
+    <div id="main" class="page"></div>
     <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
     <script src="build/index.js"></script>
   </body>
