WIP attempting to make the height work on ios... maybe go horizontal instead?

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>stupidracer</title>
     <meta name="description" content="a stupid racing game">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
   </head>
   <body>
     <div id="main" class="page"></div>
