--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <body>
     <div id="main" class="page"></div>
     <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
-    <script src="build/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
