--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="main" class="page"></div>
-    <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
+    <!--<script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>-->
     <script src="index.js"></script>
   </body>
 </html>
