--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="main" class="page"></div>
     <!--<script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>-->
-    <script src="index-e5ff6786.js"></script>
+    <script src="index-e5ff6786-v2.js"></script>
   </body>
 </html>
 
